fixed duplicate code for truncating nums

--- a/src/components/BookPreview/BookPreview.css
+++ b/src/components/BookPreview/BookPreview.css
@@ -110,3 +110,7 @@ p {
     font-size: 1em;
     color: var(--grey-500);
 }
+
+b {
+    color: var(--grey-400)
+}
